# tuifw

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
dep-obj/: .travis.yml  Cargo.toml  README.md
dep-obj/.github/workflows/: rust.yml
dep-obj/examples/: inventory.rs  rs_trigger.rs  trigger.rs
dep-obj/src/: base.rs  binding.rs  binding_t.rs  context.rs  dep.rs  example.rs  flow.rs  lib.rs  property.rs  reactive.rs
ensure_no_std/: Cargo.toml  Xargo.toml
ensure_no_std/src/: main.rs
examples/: button.rs  distance.rs  robot.rs  s.rs  view.rs  window.rs  windows.rs
examples/custom-widget/: Cargo.toml  Makefile  build.rs
examples/custom-widget/src/: floating_frame.rs  main.rs  ui.xaml
examples/distance/: Cargo.toml  build.rs
examples/distance/src/: main.rs  ui.xaml
examples/distance_xaml/src/: main.rs  ui.xaml
examples/items-list/: Cargo.toml
examples/items-list/src/: main.rs  ui.xaml
examples/options/: Cargo.toml
examples/options/src/: main.rs  ui.xaml
examples/stfl/: Cargo.toml  Makefile  build.rs
examples/stfl/src/: main.rs  ui.xaml
examples/tic-tac-toe/: Cargo.toml
examples/tic-tac-toe/src/: main.rs  ui.xaml
examples/virt-items-list/: Cargo.toml  build.rs
examples/virt-items-list/src/: main.rs  ui.xaml
property/: Cargo.toml  README.md
property/src/: context.rs  lib.rs
screen/: Cargo.toml  README.md
screen-base/: .travis.yml  Cargo.toml  README.md
screen-base/src/: bitflags_ext.rs  lib.rs
screen-dos/: Cargo.toml  README.md
screen-dos/.cargo/: config.toml
screen-dos/examples/control_chars/: Cargo.toml  Makefile  i386-pc-dos-msvc.json
screen-dos/examples/control_chars/src/: main.rs
screen-dos/src/: lib.rs
screen-ncurses/: Cargo.toml  README.md  build.rs
screen-ncurses/src/: common.rs  lib.rs  ncurses.rs  non_unicode.rs  unicode.rs
screen-test/: Cargo.toml  README.md
screen-test/src/: lib.rs
screen-winapi/: Cargo.toml  README.md
screen-winapi/src/: lib.rs
screen/examples/: colors.rs  control_chars.rs  mouse.rs  screen.rs
screen/examples/dos_colors/: Cargo.toml  Makefile  build.rs
screen/examples/dos_colors/src/: main.rs
screen/src/: lib.rs
src/: background.rs  base.rs  button.rs  canvas.rs  check_box.rs  content_presenter.rs  desk_top.rs  dock_panel.rs  frame.rs  grid.rs  input_line.rs  items_presenter.rs  label.rs  lib.rs  radio_button.rs  scroll_viewer.rs  stack_panel.rs  static_text.rs  stretch_panel.rs  text_edit.rs  virt_items_presenter.rs  virt_scroll_viewer.rs  window.rs
src/view/: base.rs  decorators.rs
src/view/decorators/: border.rs  label.rs  line.rs  robot.rs  text.rs
src/view/panels/: canvas.rs  dock.rs
t/tuifw/examples/: border.rs
t/tuifw/src/: drawing.rs  lib.rs
tuifw/: Cargo.toml
tuifw/src/: drawing.rs  lib.rs
view/: Cargo.toml  README.md
view/src/: lib.rs
widget/: Cargo.toml  README.md
widget/examples/: view.rs
widget/src/: base.rs  button.rs  context.rs  lib.rs  property.rs  view.rs
widget/src/view/: base.rs  border.rs  line.rs  mod.rs
widget/src/view/decorators/: border.rs  label.rs  line.rs  mod.rs
widget/src/view/panels/: canvas.rs  dock.rs  mod.rs
window/: Cargo.toml  README.md
window/examples/: window.rs  windows.rs
window/src/: lib.rs
xaml/: Cargo.toml  README.md
xaml/src/: lib.rs  preprocessor.rs  xaml.rs
