[package]
edition = "2021"
name = "tuifw"
version = "0.3.1"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework."
readme = "README.md"
documentation = "https://docs.rs/tuifw/"
keywords = ["tui"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[workspace]
members = [
    "screen",
    "screen-base",
    "screen-dos",
    "screen-ncurses",
    "screen-test",
    "screen-winapi",
    "window",
]
exclude = [
    "ensure_no_std",
]

[dependencies]
components-arena = "3.5.0"
macro-attr-2018 = "2.1.2"
phantom-type = { version = "0.4.2", default-features = false }
tuifw-screen-base = { path = "screen-base", version = "0.21.1" }
tuifw-window = { path = "window", version = "0.21.1" }

[badges]
maintenance = { status = "experimental" }
