[package]
edition = "2021"
name = "tuifw"
version = "0.25.2"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework."
readme = "README.md"
documentation = "https://docs.rs/tuifw/"
keywords = ["tui"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[workspace]
members = [
    "screen",
    "screen-base",
    "screen-dos",
    "screen-ncurses",
    "screen-test",
    "screen-winapi",
    "window",
    "xaml",
]
exclude = [
    "ensure_no_std",
]

[dependencies]
components-arena = "4.2.0"
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "1.0.14"
dynamic-cast = "0.1.4"
macro-attr-2018 = "3.0.0"
paste = "1.0.14"
phantom-type = { version = "0.5.0", default-features = false }
timer-no-std = "0.6.0"
tuifw-screen-base = { path = "screen-base", version = "0.25.0" }
tuifw-window = { path = "window", version = "0.25.0" }

[dev-dependencies]
panicking = "0.5.0"
tuifw-screen = { path = "screen", version = "0.25.0" }

[badges]
maintenance = { status = "experimental" }
