[package]
edition = "2018"
name = "dep-obj"
version = "0.7.0"
authors = ["warlock <internalmike@gmail.com>"]
description = "Dependency object: effective reactive heterogeneous container."
readme = "README.md"
documentation = "https://docs.rs/dep-obj/"
keywords = ["property", "reactive", "dependency", "runtime", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dep-obj"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
components-arena = { version = "1.1.1", default-features = false }
dyn-clone = "1.0.2"
dyn-context = { version = "0.3.0", default-features = false }
educe = "0.4.13"
generics = "0.2.5"
memoffset = { version = "0.5.6", features = ["unstable_const", "unstable_raw"] }
paste = "1.0.0"
phantom-type = { version = "0.3.0", default-features = false }

[dev-dependencies]
components-arena = "1.0.3"
downcast-rs = "1.2.0"
macro-attr-2018 = "1.1.0"
