[package]
edition = "2018"
name = "dep-obj"
version = "0.16.0"
authors = ["warlock <internalmike@gmail.com>"]
description = "Dependency object: effective reactive heterogeneous container."
readme = "README.md"
documentation = "https://docs.rs/dep-obj/"
keywords = ["property", "reactive", "dependency", "runtime", "type"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dep-obj"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["components-arena/std", "phantom-type/std"]

[dependencies]
components-arena = { version = "1.3.1", default-features = false, features = ["nightly"] }
downcast-rs = "1.2.0"
dyn-clone = "1.0.2"
dyn-context = "0.6.1"
educe = "0.4.13"
generics = "0.3.1"
macro-attr-2018 = "1.1.1"
memoffset = { version = "0.6.1", features = ["unstable_const"] }
newtype-derive-2018 = "0.0.3"
paste = "1.0.0"
phantom-type = { version = "0.3.1", default-features = false }
