[package]
edition = "2021"
name = "ensure_no_std"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
composable-allocators = "0.2.8"
exit-no-std = "0.2.0"
panicking = { version = "0.4.0", default-features = false, features = ["abort"] }
tuifw-screen-test = { path = "../screen-test" }
tuifw-screen = { path = "../screen" }
tuifw-window = { path = "../window" }
tuifw = { path = ".." }
