[package]
edition = "2021"
name = "tuifw-screen-base"
version = "0.13.3"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Basic platform-independent text screen interface."
readme = "README.md"
documentation = "https://docs.rs/tuifw-screen-base/"
keywords = ["tui", "ncurses", "notcurses", "screen"]
categories = ["command-line-interface", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
bitflags = "1.3.2"
enum-derive-2018 = { version = "2.0.0", default-features = false }
either = { version = "1.6.1", default-features = false }
errno-no-std = { version = "0.1.0", default-features = false }
macro-attr-2018 = "2.1.0"
num-traits = { version = "0.2.14", default-features = false }

[dev-dependencies]
panicking = "0.2.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[badges]
maintenance = { status = "experimental" }
