[package]
edition = "2021"
name = "tuifw-screen-dos"
version = "0.19.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Basic text screen implementation for DOS platform."
readme = "README.md"
documentation = "https://docs.rs/tuifw-screen-dos/"
keywords = ["tui", "dos", "screen", "dpmi", "b800h"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
dos-cp = "0.3.1"
either = { version = "1.8.0", default-features = false }
errno-no-std = { version = "0.1.5", default-features = false }
panicking = { version = "0.4.0", default-features = false }
pc-ints = "0.3.2"
tuifw-screen-base = { path = "../screen-base", version = "0.19.0" }

[badges]
maintenance = { status = "experimental" }
