[package]
edition = "2021"
name = "tuifw-screen-ncurses"
version = "0.19.1"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Basic text screen implementation for Unix/Linux platform."
readme = "README.md"
documentation = "https://docs.rs/tuifw-screen-ncurses/"
keywords = ["tui", "ncurses", "screen"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
either = { version = "1.7.0", default-features = false }
errno-no-std = { version = "0.1.5", default-features = false }
itertools = { version = "0.10.5", default-features = false }
libc = { version = "0.2.101", default-features = false }
panicking = { version = "0.4.0", default-features = false }
tuifw-screen-base = { path = "../screen-base", version = "0.19.1" }
unicode-width = "0.1.8"

[build-dependencies]
pkg-config = "0.3.19"
cc = "1.0.70"

[badges]
maintenance = { status = "experimental" }
