[package]
edition = "2021"
name = "tuifw-screen-winapi"
version = "0.22.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Basic text screen implementation for Win platform."
readme = "README.md"
documentation = "https://docs.rs/tuifw-screen-winapi/"
keywords = ["tui", "winapi", "screen"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
composable-allocators = { version = "0.2.8", default-features = false, features = ["global"] }
either = { version = "1.9.0", default-features = false }
errno-no-std = { version = "0.1.5", default-features = false }
num-traits = { version = "0.2.16", default-features = false }
panicking = { version = "0.4.0", default-features = false }
tuifw-screen-base = { path = "../screen-base", version = "0.22.0" }
unicode-width = "0.1.10"
winapi = { version = "0.3.9", features = [
    "consoleapi",
    "handleapi",
    "impl-default",
    "processenv",
    "stringapiset",
    "synchapi",
    "winbase",
    "wincon",
    "wincontypes",
    "winnls",
    "winuser"
] }

[badges]
maintenance = { status = "experimental" }
