[package]
edition = "2021"
name = "tuifw-screen"
version = "0.12.3"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Basic platform-independent text screen implementation."
readme = "README.md"
documentation = "https://docs.rs/tuifw-screen/"
keywords = ["tui", "screen"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
errno-no-std = { version = "0.1.0", default-features = false }
tuifw-screen-base = { path = "../screen-base", version = "0.12.3" }

[target.'cfg(not(windows))'.dependencies]
tuifw-screen-ncurses = { path = "../screen-ncurses", version = "0.12.3" }

[target.'cfg(windows)'.dependencies]
tuifw-screen-winapi = { path = "../screen-winapi", version = "0.12.3" }

[dev-dependencies]
panicking = "0.2.0"

[badges]
maintenance = { status = "experimental" }
