[package]
edition = "2021"
name = "tuifw-screen"
version = "0.25.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Basic platform-independent text screen implementation."
readme = "README.md"
documentation = "https://docs.rs/tuifw-screen/"
keywords = ["tui", "screen"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[lints.rust]
unexpected_cfgs = { level = "allow" }

[dependencies]
tuifw-screen-base = { path = "../screen-base", version = "0.25.0" }

[target.'cfg(target_os="dos")'.dependencies]
tuifw-screen-dos = { path = "../screen-dos", version = "0.25.0" }

[target.'cfg(all(not(target_os="dos"), not(windows)))'.dependencies]
tuifw-screen-ncurses = { path = "../screen-ncurses", version = "0.25.0" }

[target.'cfg(all(not(target_os="dos"), windows))'.dependencies]
tuifw-screen-winapi = { path = "../screen-winapi", version = "0.25.0" }

[dev-dependencies]
panicking = "0.5.0"

[badges]
maintenance = { status = "experimental" }
