[package]
edition = "2018"
name = "tuifw-widget"
version = "0.1.10"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. UI primitives and widgets."
readme = "README.md"
documentation = "https://docs.rs/tuifw-view/"
keywords = ["tui", "view", "layout", "property", "widget"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
tuifw-screen-base = { path = "../screen-base", version = "0.1.10" }
tuifw-window = { path = "../window", version = "0.1.10" }
components-arena = "0.4.0"
dep-obj = "0.0.4"
macro-attr = "0.2.0"
boow = "0.1.3"
downcast = "0.10.0"
once_cell = "1.4.0"
either = "1.5.3"
enum_derive = "0.1.7"
