[package]
edition = "2018"
name = "tuifw-widget"
version = "0.5.0"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. UI primitives and widgets."
readme = "README.md"
documentation = "https://docs.rs/tuifw-view/"
keywords = ["tui", "view", "layout", "property", "widget"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
tuifw-screen-base = { path = "../screen-base", version = "0.5.0" }
tuifw-window = { path = "../window", version = "0.5.0" }
components-arena = "0.8.4"
dyn-context = "0.0.2"
dep-obj = "0.0.17"
macro-attr-2018 = "0.3.3"
downcast-rs = "1.2.0"
once_cell = "1.4.0"
either = "1.5.3"
enum-derive-2018 = "0.2.1"
unicode-width = "0.1.8"
unicode-segmentation = "1.6.0"
educe = "0.4.13"

[dev-dependencies]
tuifw-screen = { path = "../screen", version = "0.5.0" }
