[package]
edition = "2021"
name = "tuifw-window"
version = "0.22.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Overlappable hierachical windows."
readme = "README.md"
documentation = "https://docs.rs/tuifw-window/"
keywords = ["tui", "window"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
components-arena = "4.1.0"
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "1.0.14"
educe = "0.4.23"
either = { version = "1.9.0", default-features = false }
macro-attr-2018 = "3.0.0"
timer-no-std = "0.4.0"
tuifw-screen-base = { path = "../screen-base", version = "0.22.0" }

[dev-dependencies]
panicking = "0.4.0"
tuifw-screen-test = { path = "../screen-test", version = "0.22.0" }
tuifw-screen = { path = "../screen", version = "0.22.0" }
unicode-width = "0.1.9"

[badges]
maintenance = { status = "experimental" }
