[package]
edition = "2021"
name = "tuifw-window"
version = "0.26.0"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Text User Interface Framework. Overlappable hierachical windows."
readme = "README.md"
documentation = "https://docs.rs/tuifw-window/"
keywords = ["tui", "window"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tuifw"

[dependencies]
components-arena = "4.2.0"
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "1.0.14"
dynamic-cast = "0.1.3"
iter-identify_first_last = "0.2.3"
macro-attr-2018 = "3.0.1"
timer-no-std = "0.6.0"
tuifw-screen-base = { path = "../screen-base", version = "0.26.0" }

[dev-dependencies]
panicking = "0.5.0"
tuifw-screen-test = { path = "../screen-test", version = "0.26.0" }
tuifw-screen = { path = "../screen", version = "0.26.0" }

[badges]
maintenance = { status = "experimental" }
