[package]
edition = "2021"
name = "vitemlst"
version = "0.0.0"
publish = false

[lints.rust]
unexpected_cfgs = { level = "allow" }

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace]

[dependencies]
composable-allocators = "0.3.0"
panic-no-std = "0.1.0"
panicking = { version = "0.5.0", default-features = false, features = ["abort"] }
print-no-std = "0.2.0"
rlibc = "1.0.0"
timer-no-std = "0.6.0"
tuifw = { path = "../.." }
tuifw-screen = { path = "../../screen" }
tuifw-screen-base = { path = "../../screen-base" }
tuifw-window = { path = "../../window" }

[build-dependencies]
tuifw-xaml = { path = "../../xaml" }
