[package]
edition = "2021"
name = "colors"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace]

[dependencies]
composable-allocators = { version = "0.2.3", default-features = false, features = ["global"] }
exit-no-std = "0.2.0"
panicking = { version = "0.4.0", default-features = false, features = ["abort"] }
rlibc = "1.0.0"
tuifw-screen-base = { path = "../../../screen-base" }
tuifw-screen = { path = "../.." }

[target.'cfg(target_os="dos")'.dependencies]
dos-errno-and-panic = "0.0.3"
pc-atomics = "0.0.2"

[build-dependencies]
dos-cp-generator = "0.3.1"
