[package]
edition = "2021"
name = "colors"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[workspace]

[dependencies]
composable-allocators = "0.3.0"
panic-no-std = "0.1.0"
panicking = { version = "0.5.0", default-features = false, features = ["abort"] }
tuifw-screen-base = { path = "../../../screen-base" }
tuifw-screen = { path = "../.." }
rlibc-ext = "0.2.0"

[build-dependencies]
dos-cp-generator = "0.7.0"
